--- a/CarRepairShop/src/views/layout.ejs
+++ b/CarRepairShop/src/views/layout.ejs
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="/css/app.css">
     <link rel="manifest" href="/js/manifest.json">
     <link rel="icon" type="image/png" href="/images/icon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <!-- Local bootstrap.js-->
         <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
         <script src="/js/app.js" nonce="<%= nonce %>"></script>
