--- a/CarRepairShop/src/views/partials/header.ejs
+++ b/CarRepairShop/src/views/partials/header.ejs
@@ -1,4 +1,3 @@
-
 <head>
     <style nonce="<%= nonce %>">
         body {
@@ -60,10 +59,6 @@
             display: none;
         }
 
-        #LogOutButton {
-            cursor: pointer;
-        }
-
         .pointer {
             cursor: pointer;
         }
@@ -90,32 +85,32 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav" id="defaultNav">
                     <li class="nav-item">
-                        <a class="nav-link h3 mr-2 text-light" href="/Services">
+                        <a class="nav-link h4 mr-2 text-light" href="/Services">
                             <%= __('Services') %>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h3 mr-2 text-light" href="/AboutUs">
+                        <a class="nav-link h4 mr-2 text-light" href="/AboutUs">
                             <%= __('About us') %>
                         </a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item nodisplay" id="estimatorButton">
-                        <a class="nav-link h3 mr-2 text-light" href="/Estimator">
+                        <a class="nav-link h4 mr-2 text-light" href="/Estimator">
                             <%= __('Price Estimator') %>
                         </a>
                     </li>
                     <li class="nav-item nodisplay" id="timeTableButton">
-                        <a class="nav-link h3 mr-2 text-light" href="/Appointments">
+                        <a class="nav-link h4 mr-2 text-light" href="/Appointments">
                             <%= __('Make Appointment') %>
                         </a>
                     </li>
-                
+
 
                     <li class="nav-item nodisplay" id="workerButton">
                     <li class="nav-item dropdown  dropdown-hover nodisplay" id="WorkerButtonDropDown">
-                        <a class="nav-link h3 mr-2 text-light dropdown-toggle"
+                        <a class="nav-link h4 mr-2 text-light dropdown-toggle"
                             alt="<%= __('Click or press enter to expand') %>" id="workerDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <%= __('Check Appointments') %>
@@ -136,38 +131,40 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item" id="LoginButton">
-                        <a class="nav-link h3 mr-2 text-light" href="/Login">
+                        <a class="nav-link h4 mr-2 text-light" href="/Login">
                             <%= __('Login') %>
                         </a>
                     </li>
-                    <li class="nav-item dropdown  dropdown-hover nodisplay" id="LogOutButton">
-                        <a class="nav-link h3 mr-2 text-light dropdown-toggle"
+                    <li class="nav-item dropdown dropdown-hover nodisplay" id="LogOutButton">
+                        <a class="nav-link h4 mr-2 text-light dropdown-toggle"
                             alt="<%= __('Click or press enter to expand') %>" id="accountDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <%= __('Profile') %>
                         </a>
-                        <div class="dropup dropdown-menu " aria-labelledby="accountDropdown">
-                            <a class=" dropdown-item text-white pl-3" href="/auth/ProfilePage">
+                        <div class=" dropdown-menu " aria-labelledby="accountDropdown">
+                            <a class=" dropdown-item text-light pl-3" href="/auth/ProfilePage">
                                 <%= __('Account Info') %>
                             </a>
                             <div class="bg-gray ">
-                                <a class="  dropdown-item text-white pl-3 " href="/auth/UserAppointment">
+                                <a class="  dropdown-item text-light pl-3 " href="/auth/UserAppointment">
                                     <%= __('Appointments') %>
                                 </a>
-                                <a class="  dropdown-item text-white pl-3" href="/auth/Settings">
+                                <a class="  dropdown-item text-light pl-3" href="/auth/Settings">
                                     <%= __('Notifications') %>
                                 </a>
-                                <a id="AdminMenu" class=" pl-3 dropdown-item text-white nodisplay "
+                                <a id="AdminMenu" class=" pl-3 dropdown-item text-light nodisplay "
                                     href="/admin/admin-dashboard">
                                     <%= __('Admin panel') %>
                                 </a>
-                                <a id="Statistics" class=" pl-3   dropdown-item text-white nodisplay "
+                                <a id="Statistics" class=" pl-3   dropdown-item text-light nodisplay "
                                     href="/admin/Statistics">
                                     <%= __('Statistics') %>
                                 </a>
                                 <div class=" custom-divider"></div>
                                 <a tabindex=0 class=" pl-3 dropdown-item-logout text-red pointer" id="Log-out-button">
-                                    <b><%= __('Log Out') %></b>
+                                    <b>
+                                        <%= __('Log Out') %>
+                                    </b>
                                 </a>
                             </div>
                         </div>
@@ -175,23 +172,25 @@
 
 
 
-                    <li class="nav-item dropdown form-select">
-                        <a class="nav-link dropdown-toggle h3 mr-0 text-light" id="languageDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false"><span class="small">
-                                <span id="currentLanguageFlag" class="flag-icon small"></span></span>
-                            <%= language.toUpperCase() %>
+                    <li class="nav-item dropdown form-select dropdown-hover">
+                        <a class="nav-link h4 mt-1 text-light d-flex align-items-center" id="languageDropdown"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="small d-flex align-items-center">
+                                <span id="currentLanguageFlag" class="flag-icon small me-2"></span>&nbsp;
+                                <%= language.toUpperCase() %>
+                            </span>
                         </a>
                         <ul id="languageDropdownSelect" class="dropdown-menu text-light"
                             aria-labelledby="languageDropdown">
                             <li><a class="dropdown-item text-white" href="#" data-lang="en"><span
-                                        class="flag-icon flag-icon-gb"></span> EN</a></li>
-                            <div class="bg-gray">
+                                        class="flag-icon flag-icon-gb"></span>&nbsp;&nbsp;EN</a></li>
+                            <div class="bg-light">
                                 <li><a class="dropdown-item text-white" href="#" data-lang="lv"><span
-                                            class="flag-icon flag-icon-lv"></span> LV</a></li>
+                                            class="flag-icon flag-icon-lv"></span>&nbsp;&nbsp;LV</a></li>
                                 <li><a class="dropdown-item text-white" href="#" data-lang="de"><span
-                                            class="flag-icon flag-icon-de"></span> DE</a></li>
+                                            class="flag-icon flag-icon-de"></span>&nbsp;&nbsp;DE</a></li>
                                 <li><a class="dropdown-item text-white" href="#" data-lang="ru"><span
-                                            class="flag-icon flag-icon-ru"></span> RU</a></li>
+                                            class="flag-icon flag-icon-ru"></span>&nbsp;&nbsp;RU</a></li>
                             </div>
                         </ul>
                     </li>
